# helios3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/: keybindings.json
assets/scenes/: autosave.json  default_scene.json  recent.json
assets/shaders/: basic.frag  basic.vert
src/: main.cpp
src/core/: Application.cpp  Application.h  Log.cpp  Log.h  Time.cpp  Time.h  Window.cpp  Window.h
src/editor/: EditorLayer.cpp  EditorLayer.h  EditorSettings.h  Picking.cpp  Picking.h
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
src/scene/: Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
